// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rubric Container snapshot is grading 1`] = `
<Card
  className="grading-rubric-card"
>
  <Card.Body
    className="grading-rubric-body"
  >
    <h3>
      <FormattedMessage
        defaultMessage="Rubric"
        description="Rubric interface label"
        id="ora-grading.Rubric.rubric"
      />
    </h3>
    <hr />
    <CriterionContainer
      isGrading={true}
      key="1"
      orderNum={1}
    />
    <CriterionContainer
      isGrading={true}
      key="2"
      orderNum={2}
    />
    <CriterionContainer
      isGrading={true}
      key="3"
      orderNum={3}
    />
    <CriterionContainer
      isGrading={true}
      key="4"
      orderNum={4}
    />
    <CriterionContainer
      isGrading={true}
      key="5"
      orderNum={5}
    />
    <hr />
    <RubricFeedback />
  </Card.Body>
  <div
    className="grading-rubric-footer"
  >
    <Button>
      <FormattedMessage
        defaultMessage="Submit grade"
        description="Submit Grade button text"
        id="ora-grading.Rubric.submitGrade"
      />
    </Button>
  </div>
</Card>
`;

exports[`Rubric Container snapshot is not grading 1`] = `
<Card
  className="grading-rubric-card"
>
  <Card.Body
    className="grading-rubric-body"
  >
    <h3>
      <FormattedMessage
        defaultMessage="Rubric"
        description="Rubric interface label"
        id="ora-grading.Rubric.rubric"
      />
    </h3>
    <hr />
    <CriterionContainer
      isGrading={false}
      key="1"
      orderNum={1}
    />
    <CriterionContainer
      isGrading={false}
      key="2"
      orderNum={2}
    />
    <CriterionContainer
      isGrading={false}
      key="3"
      orderNum={3}
    />
    <CriterionContainer
      isGrading={false}
      key="4"
      orderNum={4}
    />
    <CriterionContainer
      isGrading={false}
      key="5"
      orderNum={5}
    />
    <hr />
    <RubricFeedback />
  </Card.Body>
</Card>
`;
